iniciado responsividade mobile

--- a/clinica-salomao/index.html
+++ b/clinica-salomao/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/dist/output.css" rel="stylesheet">
     <title>Salomão - Clínica de Estética</title>
   </head>
   <body>
